--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,8 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0",
     "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -50,6 +52,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^2.2.0",
     "jest-dom": "^4.0.0",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1"
